Fixed alignment issues on proudct page at the tabs

--- a/StaticFiles/CSS/PageCSS/product-style.css
+++ b/StaticFiles/CSS/PageCSS/product-style.css
@@ -6,11 +6,10 @@
 }
 
 
-
+/*#region - TABS */
 .tab-content {
     /* margin-top: 1.4rem; */
     width: 100%;
-    padding: 3rem;
     display: block;
     background: rgba(255, 255, 255, 0.75);
     border-left: 1px solid #dee2e6;
@@ -18,14 +17,21 @@
     border-bottom: 1px solid #dee2e6;
 }
 
-/*#region - PET TAB
+@media (max-width: 500px) {
+    #product_display_tab{
+        padding: 0;
+    }
+}
+/*#endregion*/
+
+/*#region - PET TAB */
     .pet-tab {
         display: block;
         width: 100%;
 
     }
 
-    .dog-treat-disclaimer-list{
+    .pet-tab .dog-treat-disclaimer-list{
         list-style: disc inside;
         line-height: 1.5rem;
     }
@@ -58,6 +64,8 @@
     .card {
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         margin: auto;
+        min-width: 15em;
+        max-width: 20em;
     }
 
     .card-header {
@@ -240,7 +248,8 @@
 
     .carousel-indicators {
         background-color: rgba(0, 0, 0, 0.05);
-        width: 100%;
+        width: 50%;
+        max-width: 100%;
         margin: 0 auto;
     }
 /*#endregion*/
